Blender crashes when separating mesh #72593

Closed
opened 2019-12-20 03:23:14 +01:00 by Andrew Price · 11 comments

System Information
Operating system: Win 10 64bit
Graphics card: 2x Titan GTX

Blender Version
Broken: 2.81a
Worked: unsure

Short description of error
In attached blend, separating mesh (P > Selected) crashes blender.

Exact steps for others to reproduce the error

  • Open this attached blend file: andaz corridor2.blend
  • When you open, one edge will be selected. Press P>Separate.
  • Blender will crash, giving this reason in the cmd prompt:

Error : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF7B00617CB
Module : C:\Program Files\Blender Foundation\Blender 2.81\blender.exe

**System Information** Operating system: Win 10 64bit Graphics card: 2x Titan GTX **Blender Version** Broken: 2.81a Worked: unsure **Short description of error** In attached blend, separating mesh (P > Selected) crashes blender. **Exact steps for others to reproduce the error** - Open this attached blend file: [andaz corridor2.blend](https://archive.blender.org/developer/F8235771/andaz_corridor2.blend) - When you open, one edge will be selected. Press P>Separate. - Blender will crash, giving this reason in the cmd prompt: Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF7B00617CB Module : C:\Program Files\Blender Foundation\Blender 2.81\blender.exe
Author

Added subscriber: @AndrewPrice

Added subscriber: @AndrewPrice
Clément Foucault was assigned by Campbell Barton 2019-12-20 03:54:12 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This raises assert: DRW_mesh_batch_cache_get_surface_shaded(), at 'gpumat_array_len <= cache->mat_len'

Seems to be caused by the new mesh not using it's materials.

This raises assert: `DRW_mesh_batch_cache_get_surface_shaded(), at 'gpumat_array_len <= cache->mat_len'` Seems to be caused by the new mesh not using it's materials.

@ideasman42 I'm not sure what to expect. It seems like the boolean modifier is what set the material number to 0 in the Mesh. So is it a problem with the drawing code expecting Mesh->totcol to be equal to Ob->totcol or a problem in the boolean modifier?

@ideasman42 I'm not sure what to expect. It seems like the boolean modifier is what set the material number to 0 in the Mesh. So is it a problem with the drawing code expecting Mesh->totcol to be equal to Ob->totcol or a problem in the boolean modifier?

Checking on this, older blender releases (2.7x for eg) didn't have the requirement that these numbers matched, so it could be fixed in viewport drawing code.

OTOH, not many modifiers copy geometry between objects, so we could make this a requirement for the modifier stack.

Checking on this, older blender releases (2.7x for eg) didn't have the requirement that these numbers matched, so it could be fixed in viewport drawing code. OTOH, not many modifiers copy geometry between objects, so we could make this a requirement for the modifier stack.
Clément Foucault was unassigned by Campbell Barton 2020-01-27 04:50:32 +01:00
Campbell Barton self-assigned this 2020-01-27 04:50:32 +01:00

Added subscriber: @fclem

Added subscriber: @fclem

While it's arguable the drawing code should support this, it's less trouble to ensure all modifiers output meshes with the same number of materials, claiming this task.

While it's arguable the drawing code *should* support this, it's less trouble to ensure all modifiers output meshes with the same number of materials, claiming this task.

OTOH, I can easily patch the drawing code. @ideasman42 Choose whatever you think is the best option.

OTOH, I can easily patch the drawing code. @ideasman42 Choose whatever you think is the best option.

@fclem, if the fix is straightforward and not likely to cause issues, that'd be good.

@fclem, if the fix is straightforward and not likely to cause issues, that'd be good.
Campbell Barton was unassigned by Clément Foucault 2020-01-28 15:55:43 +01:00
Clément Foucault self-assigned this 2020-01-28 15:55:43 +01:00

This issue was referenced by 3fd4c88e3a

This issue was referenced by 3fd4c88e3a2e9d99d45a0856fcc339e013c0a79a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72593
No description provided.